--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "generate-types:spendingLimit": "cross-env typechain --target=web3-v1 --outDir './src/types/contracts' ./src/logic/contracts/artifacts/*.json",
     "lint:check": "eslint './src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint:check --fix",
-    "postinstall": "patch-package && electron-builder install-app-deps && yarn generate-types",
+    "postinstall": "yarn generate-types",
     "preelectron-pack": "yarn build",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
@@ -154,7 +154,7 @@
   "dependencies": {
     "@gnosis.pm/safe-apps-sdk": "1.0.2",
     "@gnosis.pm/safe-apps-sdk-v1": "npm:@gnosis.pm/safe-apps-sdk@0.4.2",
-    "@gnosis.pm/safe-contracts": "1.1.1-dev.2",
+    "@gnosis.pm/safe-contracts": "1.3.0",
     "@gnosis.pm/safe-react-components": "https://github.com/gnosis/safe-react-components.git#bf3a84486b7353bd25447ddff39c406f6fafecc6",
     "@gnosis.pm/util-contracts": "2.0.6",
     "@ledgerhq/hw-transport-node-hid-singleton": "5.38.0",
@@ -248,7 +248,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
-    "electron": "^9.4.0",
+    "electron": "^16.0.7",
     "electron-builder": "22.9.1",
     "electron-notarize": "1.0.0",
     "eslint": "^7.11.0",
